--- a/src/components/ProfilePage/profile.css
+++ b/src/components/ProfilePage/profile.css
@@ -1,6 +1,6 @@
 
 
-body {
+.student-profile {
     background: #67B26F;
     /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #4ca2cd, #67B26F);
