--- a/src/components/ProfilePage/profile.css
+++ b/src/components/ProfilePage/profile.css
@@ -1,7 +1,7 @@
 
 
 .student-profile {
-    background: #67B26F;
+    /* background: #67B26F; */
     /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #4ca2cd, #67B26F);
     /* Chrome 10-25, Safari 5.1-6 */
