--- a/src/components/ProfilePage/profile.css
+++ b/src/components/ProfilePage/profile.css
@@ -3,12 +3,14 @@
 .student-profile {
     /* background: #67B26F; */
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #4ca2cd, #67B26F);
+    /* background: -webkit-linear-gradient(to right, #4ca2cd, #67B26F); */
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #4ca2cd, #67B26F);
+    /* background: linear-gradient(to right, #4ca2cd, #67B26F); */
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     padding: 0;
     margin: 0;
+    margin-left: 22rem;
+    /* margin-top: 2rem; */
     font-family: 'Lato', sans-serif;
     color: #000;
 }
@@ -41,4 +43,10 @@
     font-size: 14px;
     padding: 5px 10px;
     color: #000;
+}
+
+.table-bordered {
+    border: 1px solid #dee2e6;
+    margin-left: -1px;
+    margin-top: 5%;
 }
