--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -1,9 +1,10 @@
 table {
     background-color: red;
-    max-width: 900px;
+    max-width: 70rem;
     width: 100%;
-    margin: 2rem auto;
+    margin: 4rem 20rem;
     text-align: center;
+    min-height: max-content;
 }
 
 table th,
