--- a/src/components/login/form.css
+++ b/src/components/login/form.css
@@ -7,9 +7,9 @@
     font-family: "Poppins", sans-serif;
 }
 
-body {
+/* body {
     background: #dfe9f5;
-}
+} */
 
 .wrapper {
     width: 350px;
@@ -34,7 +34,7 @@ p {
     margin-top: 10px;
 }
 
-form input {
+form .input {
     width: 85%;
     /* outline: none; */
     border: none;
@@ -56,7 +56,7 @@ form input {
     color: #07001f;
 }
 
-button {
+.signbutton {
     font-size: 1.1rem;
     margin-top: 1rem;
     padding: 8px 0;
