--- a/src/components/registration/testregistration.css
+++ b/src/components/registration/testregistration.css
@@ -8,20 +8,23 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body {
+/* body {
     min-height: 100vh;
-    /* width: 500px; */
     display: flex;
     align-items: center;
     justify-content: center;
     background: #4070f4;
+} */
+
+.main{
+    margin-top: 4.5rem;
+    margin: auto;
 }
 
 .container {
     position: relative;
-    max-width: 950px;
-    width: 900px;
-    /* height: 500px; */
+    max-width: 900px;
+    width: 100%;
     border-radius: 6px;
     padding: 30px;
     margin: 0 15px;
@@ -181,7 +184,7 @@ form .buttons button,
     margin-right: 14px;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 750px) {
     .container form {
         overflow-y: scroll;
     }
